fixed for numbers more than INTEGER